--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon (1).ico">
+  <meta name="description" content="I am a diligent college student. Driven by my ambition and takes pride in my accomplishments. As a student, my goals include being the best version of myself as well as challenging myself to get out of my comfort zones.">
+  <meta name="author" content="ksanc126">
 
-  <title>John Doe - Business Administration</title>
+  <title> Kaitlyn Sanchez - Education </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Kaitlyn Sanchez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/KaitlynSanchez.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,27 +58,30 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Kaitlyn Sanchez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Liberal Studies📚</div>
+        <p class="lead mb-4">I am a highly motivated and versatile liberal studies major with a passion for interdisciplinary learning and a strong commitment to community service. I am currently trying to achieve a Bachelor of Arts degree from the University of California Riverside, and have completed rigorous classes that included coursework in Biology, Calculus, Computer Science, Public Policy, and Economics. I am skilled in research and analysis, with experience using both qualitative and quantitative methods. I am also a strong communicator, with experience presenting to both academic and non-academic audiences. I am also fluent in Spanish, and have goals to study abroad to further develop my knowledge of Hispanic culture.
+I am a first generation college student from a low class household of an immigrant father that works two jobs. My childhood has been driven by the desire of achieving more than what my father had the opportunity of ever doing. I have somehow managed to be the other parent figure for my four younger siblings. I have gained skills of caregiving for younger ages as well as older ages for I took care of my father after two surgeries. I have always been driven to accomplish whatever I must do, even if it means waking up every morning before sunrise and walking forty-five minutes to a bus stop.
+Throughout high school, I have demonstrated a strong academic record, earning 4.0 GPA and being the top twenty-five students in my graduating class of 2022, and was actively involved in key club, as well as, a literature and reading club. I have also gained valuable experience with tutoring a variety of students from the ages of high school and down in all subjects necessary, where I have developed skills in collaborating, being a leader, and being in a student-centric environment.
+In addition to being one of the top ranked students in my high school years, I have also demonstrated a strong commitment to community service. I have volunteered for libraries, cleaning my community, and helping out at animal shelters, where I have gained valuable experience in implementing responsibility and organization. I have been passionate about using these skills and knowledge to make a positive impact on my community, and am dedicated to continuing my work in assisting students with any necessary subjects that they might be struggling with.
+In being a teacher assistant, I have continued to build upon my skills and knowledge, and have demonstrated my skills during my time in being a teacher aid for my previous high school I once attended. I am known for my serious work ethic and respect for authority and is respected by my colleagues. I am committed to staying up-to-date with the latest developments in the education field, and am constantly seeking out new opportunities to expand my knowledge and expertise.
+In the future, I plan to continue my work in the education field, with a focus on wanting to be an English teacher. I am excited about the opportunities ahead, and am committed to using my skills and knowledge to make a positive impact on my community. I am a dedicated and hardworking individual with a strong sense of purpose, and am poised to achieve great things in my future career.
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/kait_ns">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/KaitlynSanchez">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/kaitn_s">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
-            <i class="fa fa-envelope"></i>
+          <a target="_blank" id="socialicon-4" href="mailto:ksanc126@ucr.edu">  
+          <i class="fa fa-envelope"></i>
           </a>
         </div>
       </div>
@@ -92,30 +95,31 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Key Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.puhsd.org/3/Content2/pvhs-key-club">Member</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • organized events<br> 
+              • cleaned waste off of environment<br>
+              • Experience in group settings<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2019 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.dollartree.com">Dollar Tree</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • experience with communicating to customers
+              <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2021 - June 2022</span>
           </div>
         </div>
 
@@ -123,17 +127,17 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.pvhs.puhsd.org/3/home">Paloma Valley High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • ran tutoring groups to help with any subject<br>
+            • Reviewed and graded students papers for AVID classes<br>
+            • Created slideshows to help organize AVID students<br>
+            • helped tutor 7 classes throughout the year<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2022 - Present</span>
           </div>
         </div>
 
@@ -152,35 +156,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Liberal Studies Major</div>
+            
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
+            <span class="text-primary">September 2022 - June 2026</span>
 
       </div>
     </section>
@@ -190,16 +170,21 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+<center>
+    <img src="img/communityservice.jpg" width="500px">
+    <img src="img/kc.jpg" width="500px"><br>
+    <img src="img/Paloma_Avid.jpg" width="500px">
+    <img src="img/PVHS.jpg" width="500px"><br>
+    <img src="img/tutor.jpg" width="500px">
+    <img src="img/cashier.jpg" width="500px"><br>
+</center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Kaitlyn Sanchez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
